--- a/index.css
+++ b/index.css
@@ -1,3 +1,37 @@
-#heading{
-    color: red;
+.header
+{
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+.logo
+{
+    width: 200px;
+}
+.nav-items>ul{
+    font-size: 20px;
+    display: flex;
+    list-style-type: none;
+}
+.nav-items>ul>li
+{
+    padding: 10px;
+    margin: 10px;
+}
+.search{
+    padding: 10px;
+}
+
+.res-card{
+    padding: 5px;
+    height: 250px;
+    width: 200px;
+    border: 1px solid black;
+    background-color: #00000;
+
+}
+
+.res-logo{
+    width: 100%;
+    height: 140px;
 }
