--- a/index.css
+++ b/index.css
@@ -22,16 +22,31 @@
     padding: 10px;
 }
 
-.res-card{
-    padding: 5px;
-    height: 250px;
-    width: 200px;
+.res-card:hover{
     border: 1px solid black;
-    background-color: #00000;
+    cursor: pointer;
+
+}
+
+.res-card{
+    width: 200px;
+    border-radius: 20px;
+    background-color: #DCDCDC;
+    padding: 10px;
+    margin: 10px;
 
 }
 
 .res-logo{
+    border-radius: 25px;
     width: 100%;
     height: 140px;
+}
+
+.res-container
+{
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+
 }
