--- a/index.css
+++ b/index.css
@@ -29,15 +29,20 @@
 }
 
 .res-card{
-    width: 200px;
+    width: 20%;
     border-radius: 20px;
     background-color: #DCDCDC;
-    padding: 10px;
     margin: 10px;
+    padding: 10px;
 
 }
 
+.resName, .resCusinie
+{
+    width: 100%;
+}
 .res-logo{
+    border: px solid black;
     border-radius: 25px;
     width: 100%;
     height: 140px;
@@ -49,4 +54,9 @@
     display: flex;
     flex-wrap: wrap;
 
+}
+
+.resName, .resRating, .resCusinie, .resDelivery
+{
+    font-family: sans-serif;
 }
