--- a/index.css
+++ b/index.css
@@ -1,68 +1,63 @@
-.header
-{
-    border: 1px solid black;
-    display: flex;
-    justify-content: space-between;
+.header {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
 }
-.logo
-{
-    width: 200px;
+.logo {
+  width: 200px;
 }
-.nav-items>ul{
-    font-size: 20px;
-    display: flex;
-    list-style-type: none;
+.nav-items > ul {
+  font-size: 20px;
+  display: flex;
+  list-style-type: none;
 }
-.nav-items>ul>li
-{
-    padding: 10px;
-    margin: 10px;
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
 }
-.search{
-    padding: 10px;
+.search {
+  padding: 10px;
 }
 
-.res-card:hover{
-    border: 1px solid black;
-    cursor: pointer;
-
+.res-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
 }
 
-.res-card{
-    width: 20%;
-    border-radius: 20px;
-    background-color: #DCDCDC;
-    margin: 10px;
-    padding: 10px;
-
+.res-card {
+  width: 20%;
+  border-radius: 20px;
+  background-color: #dcdcdc;
+  margin: 10px;
+  padding: 10px;
 }
 
-.resName, .resCusinie
-{
-    width: 100%;
+.resName,
+.resCusinie {
+  width: 100%;
 }
-.res-logo{
-    border: px solid black;
-    border-radius: 25px;
-    width: 100%;
-    height: 140px;
-}
-
-.res-container
-{
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-
+.res-logo {
+  border: px solid black;
+  border-radius: 25px;
+  width: 100%;
+  height: 140px;
 }
 
-.resName, .resRating, .resCusinie, .resDelivery
-{
-    font-family: sans-serif;
+.res-container {
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.filter-btn{
-    cursor: pointer;
-    padding: 10px;
-    margin: 10px;
+.resName,
+.resRating,
+.resCusinie,
+.resDelivery {
+  font-family: sans-serif;
+}
+
+.filter-btn {
+  cursor: pointer;
+  padding: 10px;
+  margin: 10px;
 }
