--- a/index.css
+++ b/index.css
@@ -24,14 +24,6 @@
   cursor: pointer;
 }
 
-.res-card {
-  width: 20%;
-  border-radius: 20px;
-  background-color: #dcdcdc;
-  margin: 10px;
-  padding: 10px;
-}
-
 .resName,
 .resCusinie {
   width: 100%;
@@ -41,12 +33,6 @@
   border-radius: 25px;
   width: 100%;
   height: 140px;
-}
-
-.res-container {
-  padding: 10px;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .resName,
@@ -93,7 +79,7 @@
   height: 290px;
   background-color: gray;
   animation-name: example;
-  animation-duration: 2s;
+  animation-duration: 1.5s;
   border-radius: 20px;
 }
 
@@ -109,4 +95,31 @@
   to {
     background-color: darkgrey;
   }
+}
+
+.error-page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.error-image {
+  width: 100px;
+}
+.restaurant-card {
+  --elevation: 10px;
+  padding: 10px;
+  width: 20%;
+  text-decoration: none;
+  margin: 10px;
+}
+
+.res-container {
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
