--- a/index.css
+++ b/index.css
@@ -19,12 +19,6 @@
   padding: 10px;
 }
 
-.res-card:hover {
-  border: 1px solid black;
-  border-radius: 20px;
-  cursor: pointer;
-}
-
 .resName,
 .resCusinie {
   width: 100%;
@@ -113,15 +107,24 @@
 }
 
 .restaurant-card {
+  transition: all 0.6s;
+  box-shadow: -30px 10px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  box-shadow: black;
   --elevation: 10px;
   padding: 10px;
   width: 20%;
   text-decoration: none;
-  margin: 5px;
+  margin: 10px;
   /* margin: 20px;
   width: 290px;
   height: 290px;
   border-radius: 20px; */
+}
+
+.restaurant-card:hover {
+  border: 2px solid lightgrey;
+  transform: scale(1.06);
 }
 
 .res-container {
