--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
-.header {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* .header {
   border: 1px solid black;
   display: flex;
   justify-content: space-between;
@@ -127,4 +130,4 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-}
+} */
